-Ahora hacemos el check con el estado del saldo que devuelve el webservice en lugar de un campo de la base de datos para darse de alta.

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,24 +4,24 @@ body {
  /* Añade color de fondo al body */
 }
 ::-webkit-scrollbar {
-    width: 12px;
-    background: #EFEFEF;
+  width: 12px;
+  background: #EFEFEF;
 }
 ::-webkit-scrollbar-thumb:hover {
-   background: #111;    
+ background: #111;    
 } 
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
-     display: none;    
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+  display: none;    
 }
- ::-webkit-scrollbar-thumb {
-     background: #333;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+::-webkit-scrollbar-thumb {
+ background: #333;
+ -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
 }
 
 @font-face {
   font-family: fuentePrincipal;
-  src: url('http://localhost/blog/public/assets/fonts/calibri.ttf');
+  src: url('http://localhost/plataforma/public/assets/fonts/calibri.ttf');
   /* Importa la fuente que usaremos en el blog */
 }
 .titularEntrada{
@@ -152,14 +152,14 @@ input[type=content], select {
 }
 .button1Datatables{
  width: 100%;
-  background-color: #333;
-  color: white;
-  padding: 14px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  font-family: fuentePrincipal;
-  font-size: 20px;
+ background-color: #333;
+ color: white;
+ padding: 14px 20px;
+ margin: 8px 0;
+ border: none;
+ cursor: pointer;
+ font-family: fuentePrincipal;
+ font-size: 20px;
 }
 .button1Datatables:hover:not(.active) {
   background-color: #111;
@@ -246,3 +246,24 @@ hr.style13 {
   height: 5px;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(51, 51, 51, 1), rgba(0, 0, 0, 0));
 }
+.estiloarea{
+  width: 100%;
+  height: 280px;
+  resize: none;
+}
+.estiloareanumeros{
+  width: 115px;
+  resize: none;
+  height: 100%;
+}
+.demo-container
+{
+  width: 100%;
+  max-width: 350px;
+  margin: 50px auto;
+}
+
+
+
+
+
